<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="srinternet.glue.ConfirmaPareja">

    <ImageView
        android:id="@+id/imageView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/boton_corazon"
        android:layout_below="@+id/textView47"
        android:layout_marginTop="160dp"
        android:layout_marginRight="40dp"
        android:layout_alignRight="@+id/button6" />

    <ImageView
        android:id="@+id/imageView49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/boton_corazon"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/textView47"
        android:layout_marginLeft="40dp"
        android:layout_alignLeft="@+id/button6" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/emparejar"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button7"
        android:layout_alignParentLeft="true"
        android:backgroundTint="@color/azul_claro"
        android:text="@string/ello"
        android:textColor="@color/cardview_light_background" />

    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/colorBackgroundTrash"
        android:text="@string/ups"
        android:textColor="@color/cardview_light_background"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="false"
        android:gravity="center"
        android:layout_below="@+id/textView13"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
